k8s/apps/devops-app/base/policy/devops-app-label-policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "label-policy"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  validations:
    - expression: "has(object.metadata.labels) && \"app.kubernetes.io/name\" in object.metadata.labels && \"app.kubernetes.io/version\" in object.metadata.labels"
      message: "Both 'app.kubernetes.io/name' and 'app.kubernetes.io/version' must be present in the labels."
